# dummy1

./: .gitignore  README.md
dummy1_bringup/: .gitignore  package.xml  setup.cfg  setup.py
dummy1_bringup/dummy1_bringup/src/: Odompub.py  dummy1_teleop_twist_keyboard.py  jointstatepub.py  lidar_way_node.py  mcu_node.py  odomtf.py
dummy1_bringup/dummy1_bringup/src/testmodul/: template_data.py
dummy1_bringup/launch/: lidar.launch.py  mcu.launch.py
dummy1_bringup/param/: ekf.yaml  mcu.yaml  mpu9250.yaml  ydlidar.yaml
dummy1_bringup/src/: jointstatepub.py
dummy1_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dummy1_description/launch/: description.launch.py
dummy1_description/rviz/: description.rviz
dummy1_description/urdf/: base.urdf.xacro
dummy1_gazebo/: package.xml  setup.cfg  setup.py
dummy1_gazebo/launch/: gazebo.launch.py
dummy1_gazebo/worlds/: playground.sdf
dummy1_navigation/: CMakeLists.txt  package.xml
dummy1_navigation/config/: navigation.yaml  slam.yaml
dummy1_navigation/launch/: navigation.launch.py  slam.launch.py
dummy1_navigation/maps/: map.pgm  map.yaml
dummy1_navigation/rviz/: navigation.rviz  slam.rviz
map_odom_broadcaster/: CMakeLists.txt  package.xml
map_odom_broadcaster/src/: map_odom_broadcaster.cpp
script/: .gitignore  platformio.ini
script/lib/Calculates/: Calculates.cpp  Calculates.h
script/lib/Imu/: Imu.h  imu_test.h
script/lib/Motor/: Motor.cpp  Motor.h
script/lib/Pid/: PID.cpp  PID.h
script/src/: main.cpp
test_due/: platformio.ini
test_due/src/: main.cpp
(+9 files in other folders)
